--- a/src/app/chart/gene-chart/gene-chart.component.html
+++ b/src/app/chart/gene-chart/gene-chart.component.html
@@ -1,3 +1,6 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<a href="#" (click)="downloadImage($event)" style="font-size:24px" class="material-icons">add_a_photo</a>
+
 <div class="chart-wrapper" *ngIf = "bubbleChartData">
         <canvas baseChart
         [datasets]="bubbleChartData"
