--- a/src/app/chart/gene-chart/gene-chart.component.html
+++ b/src/app/chart/gene-chart/gene-chart.component.html
@@ -1,5 +1,5 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<a href="#" (click)="downloadImage($event)" style="font-size:24px" class="material-icons">add_a_photo</a>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<a href="#" (click)="downloadImage($event)" style="font-size:24px" class="fa fa-picture-o"></a>
 
 <div class="chart-wrapper" *ngIf = "bubbleChartData">
         <canvas baseChart
